# ORBIT

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: backend_integration.md  data_formats.md  index.html  paper_alignment.md  pipeline.md  readme.md  reproducibility.md  visual_mix_styles.md
docs/static/css/: index.css
docs/static/js/: index.js
examples/: rollout_results.jsonl  scene_objects.json  selector_records.jsonl  task_fries.json
orbit_vla/: __init__.py  pipeline.py  types.py
orbit_vla/adaptation/: __init__.py  memory.py  selector.py
orbit_vla/carriers/: __init__.py  matrix.py  perturbations.py  text.py  validation.py  visual.py
orbit_vla/cli/: build_carriers.py  build_graph.py  selector_replay.py  summarize_rollouts.py
orbit_vla/evaluation/: __init__.py  metrics.py
orbit_vla/frames/: __init__.py  expander.py  library.py
orbit_vla/graph/: __init__.py  builder.py  relations.py  validation.py
orbit_vla/io/: __init__.py  json_utils.py
orbit_vla/selection/: __init__.py  action_relevance.py
scripts/: build_carriers.py  build_graph.py  selector_replay.py  summarize_rollouts.py
